# dunepdsprce

./: .gitignore  CMakeLists.txt  README.md  Release Notes.md
dam/export/x86_64-linux/lib/: libprotodune-dam.so.0  libprotodune-dam.so.0.0.0
dam/source/cc/dam/: DataFragmentUnpack.hh  HeaderFragmentUnpack.hh  Headers.hh  RceFragmentUnpack.hh  TpcAdcVector.hh  TpcFragmentUnpack.hh  TpcRecords.hh  TpcStream.hh  TpcStreamUnpack.hh  WibFrame.hh
dam/source/cc/dam/access/: DataFragment.hh  (+8 more)
dam/source/cc/make/: Makefile
dam/source/cc/ptd/: CMakeLists.txt  PdEntropy.cc  PdReaderTest.cc  PdWibFrameExtract.cc  PdWibFrameTest.cc  Reader.hh  TpcWindow.hh  reader.cc  wibFrame_test.cc
dam/source/cc/sdf/: organization.txt
dam/source/cc/src/: CMakeLists.txt  Data.cc  DataFragment-Impl.hh  DataFragmentUnpack.cc  HeaderFragmentUnpack.cc  Headers.cc  Identifier.cc  Originator.cc  RceFragmentUnpack.cc  TpcCompressed-Impl.hh  TpcCompressed.cc  TpcFragment-Impl.hh  TpcFragment.cc  TpcFragmentUnpack.cc  TpcPacket-Impl.hh  TpcRanges-Impl.hh  TpcRecords-Impl.hh  TpcRecords.cc  TpcStream-Impl.hh  TpcStream.cc  TpcStreamAssessor.cc  TpcStreamUnpack.cc  TpcToc-Impl.hh  TpcToc.cc  TpcTrimmedRange.hh  WibFrame-Impl.hh  WibFrame-avx.hh  WibFrame-avx2.hh  WibFrame-gen.hh  WibFrame.cc  apdtemplate.h
dunebuild/: build-dunepdsprce.sh  buildMrb  installPackage
makeutils/: Makefile_template  create.csh  define_roots.mk  define_roots.mk-sav  define_target.mk  define_tools.mk  prologue.mk  recipes.mk  recipes.mk-sav  targets.mk
scripts/: installation_spec_dir.sh  settings.csh  settings.sh
(+9 files in other folders)
